--- a/src/main/resources/templates/casLoginView.html
+++ b/src/main/resources/templates/casLoginView.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title th:text="#{cas.login.pagetitle}">CAS Acceptable Use Policy View</title>
+    <title th:text="#{cas.login.pagetitle}"></title>
     <link href="../../static/css/cas.css" rel="stylesheet" th:remove="tag" />
 
 </head>
@@ -19,18 +19,18 @@
                 class="login-section login-form"
                 th:if="${@casThymeleafLoginFormDirector.isLoginFormViewable(#vars)}">
                 <div th:replace="fragments/loginform :: loginform">
-                    <a href="fragments/loginform.html">Login Form goes here</a>
+                    <a href="fragments/loginform.html"></a>
                 </div>
             </section>
             <section id="providers" class="login-section login-providers" th:if="${delegatedAuthenticationProviderConfigurations} OR ${wsfedUrls}">
                 <div th:replace="fragments/loginProviders :: loginProviders">
-                    <a href="fragments/loginProviders.html">loginProviders</a>
+                    <a href="fragments/loginProviders.html"></a>
                 </div>
             </section>
             
             <section id="acceptto" class="login-section login-qr d-xs-none d-md-block" th:if="${accepttoApplicationId}">
                 <div th:replace="fragments/accepttoQRCode :: accepttoQRCode">
-                    <a href="fragments/accepttoQRCode.html">accepttoQRCode</a>
+                    <a href="fragments/accepttoQRCode.html"></a>
                 </div>
             </section>
         </div>
