Minor frontend fix

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -72,11 +72,11 @@
                 </a>
                 <a class="mdc-list-item" href="https://www.cos.io/about/support-cos">
                     <i class="mdi mdi-post"></i>&nbsp;
-                    <span class="mdc-list-item__text">[[#{cas.login.resources.cos.home}]]</span>
+                    <span class="mdc-list-item__text">[[#{cas.login.resources.cos.donate}]]</span>
                 </a>
                 <a class="mdc-list-item" href="https://www.cos.io/">
                     <i class="mdi mdi-information"></i>&nbsp;
-                    <span class="mdc-list-item__text">[[#{osf.cos}]]</span>
+                    <span class="mdc-list-item__text">[[#{cas.login.resources.cos.home}]]</span>
                 </a>
             </nav>
         </div>
