--- a/src/main/resources/templates/casTwoFactorLoginView.html
+++ b/src/main/resources/templates/casTwoFactorLoginView.html
@@ -5,17 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title th:text="#{screen.onetimepasswordrequired.heading}"></title>
+    <title th:text="#{cas.login.pagetitle}">CAS Acceptable Use Policy View</title>
     <link href="../../static/css/cas.css" rel="stylesheet" th:remove="tag" />
+
 </head>
 
-<body>
-    <main role="main" class="container mt-3 mb-3">
-        <div layout:fragment="content" class="banner banner-danger mdc-card p-4 m-auto w-lg-66">
-            <h2 th:utext="#{screen.onetimepasswordrequired.heading}"></h2>
-            <p th:utext="#{screen.onetimepasswordrequired.message}"></p>
-        </div>
-    </main>
+<body class="login mdc-typography">
+<div layout:fragment="content" class="d-flex justify-content-center">
+
+    <div class="d-flex justify-content-center flex-md-row flex-column mdc-card mdc-card-content"
+         th:classappend="${delegatedAuthenticationProviderConfigurations} OR ${accepttoApplicationId} ? 'w-lg-30' : 'w-lg-50'">
+        <section id="loginForm"
+                 class="login-section login-form"
+                 th:if="${@casThymeleafLoginFormDirector.isLoginFormViewable(#vars)}">
+            <div th:replace="fragments/loginform :: loginform">
+                <a href="fragments/loginform.html">Login Form goes here</a>
+            </div>
+        </section>
+        <section id="providers" class="login-section login-providers" th:if="${delegatedAuthenticationProviderConfigurations} OR ${wsfedUrls}">
+            <div th:replace="fragments/loginProviders :: loginProviders">
+                <a href="fragments/loginProviders.html">loginProviders</a>
+            </div>
+        </section>
+
+        <section id="acceptto" class="login-section login-qr d-xs-none d-md-block" th:if="${accepttoApplicationId}">
+            <div th:replace="fragments/accepttoQRCode :: accepttoQRCode">
+                <a href="fragments/accepttoQRCode.html">accepttoQRCode</a>
+            </div>
+        </section>
+    </div>
+</div>
 </body>
 
 </html>
