--- a/src/main/resources/templates/casLoginView.html
+++ b/src/main/resources/templates/casLoginView.html
@@ -23,18 +23,11 @@
                 </div>
             </section>
             <section id="providers" class="login-section login-providers" th:if="${delegatedAuthenticationProviderConfigurations} OR ${wsfedUrls}">
-                <div th:replace="fragments/loginProviders :: loginProviders">
-                    <a href="fragments/loginProviders.html"></a>
-                </div>
-            </section>
-            
-            <section id="acceptto" class="login-section login-qr d-xs-none d-md-block" th:if="${accepttoApplicationId}">
-                <div th:replace="fragments/accepttoQRCode :: accepttoQRCode">
-                    <a href="fragments/accepttoQRCode.html"></a>
+                <div th:replace="fragments/loginproviders :: loginproviders">
+                    <a href="fragments/loginproviders.html"></a>
                 </div>
             </section>
         </div>
     </div>
 </body>
-
 </html>
