--- a/src/main/resources/templates/fragments/loginsidebar.html
+++ b/src/main/resources/templates/fragments/loginsidebar.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title>Login Sidebar Fragment</title>
+    <title></title>
     <link href="../../static/css/cas.css" rel="stylesheet" th:remove="tag" />
 </head>
 
@@ -14,10 +14,7 @@
     <main role="main" class="container mt-3 mb-3">
         <div th:fragment="loginsidebar" id="sidebar">
             <div class="sidebar-content">
-                <p th:utext="#{screen.welcome.security}">For security reasons, please <a href="logout">log out</a> and
-                    exit
-                    your web browser when you are done accessing \
-                    services that require authentication!</p>
+                <p th:utext="#{screen.welcome.security}" hidden></p>
             </div>
         </div>
     </main>
