Add the button link to resend OSF confirmation URL

--- a/src/main/resources/templates/casAccountNotConfirmedOsfView.html
+++ b/src/main/resources/templates/casAccountNotConfirmedOsfView.html
@@ -14,8 +14,13 @@
         <div layout:fragment="content" class="banner banner-danger mdc-card p-4 m-auto w-lg-66">
             <h2 th:utext="#{screen.accountnotconfirmedosf.heading}"></h2>
             <p th:utext="#{screen.accountnotconfirmedosf.message}"></p>
+            <br />
+            <a class="mdc-button mdc-button--raised" th:href="#{osf.resend.osf.confirmation.url}">
+                <span class="mdc-button__label" th:utext="#{screen.pm.button.resendosfconfirmation}"></span>
+            </a>
+        </div>
+        <div>
         </div>
     </main>
 </body>
-
 </html>
