--- a/src/main/resources/templates/casGenericSuccessView.html
+++ b/src/main/resources/templates/casGenericSuccessView.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
-    <title th:text="#{screen.success.header}">Generic Success View</title>
+    <title th:text="#{screen.success.header}"></title>
     <link href="../../static/css/cas.css" rel="stylesheet" th:remove="tag"/>
 </head>
 
@@ -14,8 +14,8 @@
     <div layout:fragment="content" class="row">
         <div class="w-100 m-auto mdc-card p-4">
 
-            <h2 th:utext="#{screen.success.header}">Log In Successful</h2>
-            <p th:utext="#{screen.success.success(${authentication.principal.id})}">You, <strong>username</strong>, have successfully logged into the Central Authentication Service. This is what CAS knows about you:However, you are seeing this page because CAS does not know about your target destination and how to get you there. Examine the authentication request again and make sure a target service/application that is authorized and registered with CAS is specified.</p>
+            <h2 th:utext="#{screen.success.header}"></h2>
+            <p th:utext="#{screen.success.success(${authentication.principal.id})}"></p>
             <p th:unless="${#maps.isEmpty(authentication.principal.attributes)}">
 
                 The following attributes are resolved for <strong th:utext="${authentication.principal.id}" />:
@@ -45,9 +45,7 @@
                 </div>
 
             </p>
-            <p th:utext="#{screen.success.security}">
-                When you are finished, for security reasons, please <a href="logout">log out</a> and exit your web browser.
-            </p>
+            <p th:utext="#{screen.success.security}"></p>
         </div>
 
         <script type="text/javascript" th:inline="javascript">
