--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -24,9 +24,9 @@
 <main role="main" class="container mt-3 mb-3">
     <div layout:fragment="content">
         <div class="mdc-card p-4 banner banner-danger">
-            <h2 th:utext="#{screen.unavailable.heading(${status},${error})}">CAS is unable to process this request: "{0}:{1}"</h2>
-            <div th:utext="#{screen.unavailable.message}">screen.unavailable.message would go here</div>
-            <pre id="errorMsg" class="mt-4" style="white-space: pre-wrap;" th:text="${'Error: ' + message}">error message would go here</pre>
+            <h2 th:utext="#{screen.unavailable.heading(${status},${error})}"></h2>
+            <div th:utext="#{screen.unavailable.message}"></div>
+            <pre id="errorMsg" class="mt-4" style="white-space: pre-wrap;" th:text="${'Error: ' + message}"></pre>
             <p id="errorDetails" class="word-break-all">
                 <button type="button" class="mdc-button mdc-button--raised"
                         onclick="showErrorDetails();">
