--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -22,10 +22,10 @@
                 </button>
             </section>
             <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-center">
-                    <span class="cas-brand mx-auto">
-                        <span class="sr-only">OSF CAS</span>
-                        <img class="cas-logo" src="/images/osf-logo-white.png">
-                    </span>
+                <span class="cas-brand mx-auto">
+                    <img class="cas-logo" src="/images/osf-cas-banner-white.png">
+                    <span class="sr-only">OSF CAS</span>
+                </span>
             </section>
             <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end">
             </section>
@@ -34,7 +34,7 @@
 
     <aside id="app-drawer" class="mdc-drawer mdc-drawer--dismissible mdc-drawer--modal">
         <div class="mdc-drawer__header">
-            <h3 class="mdc-drawer__title">[[#{cas.drawer.title}]]</h3>
+            <img class="cas-brand cas-brand-drawer" src="/images/osf-cas-banner.png">
             <h6 class="mdc-drawer__subtitle">[[#{cas.drawer.subtitle}]]</h6>
         </div>
         <div class="mdc-drawer__content">
