--- a/src/main/resources/static/css/cas.css
+++ b/src/main/resources/static/css/cas.css
@@ -630,3 +630,84 @@ body {
 .service-ui-logo {
     max-height: 7rem;
 }
+
+.delegation-row {
+    padding: 10px 0;
+}
+
+.delegation-button {
+    position: relative;
+    outline: none;
+    -webkit-appearance: none;
+    width: 100%;
+    text-decoration: none;
+    font-size: 1rem;
+    background-image: linear-gradient(to bottom, #fff 0, #e0e0e0 100%);
+    border: 1px solid var(--cas-theme-primary, #153e50);
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    display: inline-block;
+    padding: 18px 0 18px 0;
+    text-align: center;
+}
+
+.delegation-button:hover {
+    cursor: pointer;
+    -webkit-box-shadow: 0px 0px 5px 0px #ababab;
+    -moz-box-shadow: 0px 0px 5px 0px #ababab;
+    box-shadow: 0px 0px 5px 0px #ababab;
+}
+
+.delegation-button:active {
+    background-image: linear-gradient(to top, #fff 0, #e0e0e0 100%);
+}
+
+.delegation-button-logo {
+    position: absolute;
+    left: 0;
+    top: 0;
+    border-right: 1px solid var(--cas-theme-primary, #153e50);
+    padding: 9px;
+    height: 54px
+}
+
+.delegation-button-label {
+    font-size: 1rem;
+    color: black;
+    opacity: 0.75;
+    white-space: nowrap;
+    padding-left: 55px;
+}
+
+.hr-text {
+    line-height: 1rem;
+    position: relative;
+    outline: 0;
+    border: 0;
+    color: black;
+    text-align: center;
+    height: 1.5rem;
+    opacity: .5;
+    font-size: 1rem;
+}
+
+.hr-text::before {
+    content: '';
+    background: linear-gradient(to right, transparent, black, var(--cas-theme-osf-surface, #F7F7F7));
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    height: 1px;
+}
+
+.hr-text::after {
+    content: attr(data-content);
+    position: relative;
+    display: inline-block;
+    color: black;
+    padding: 0 .5em;
+    line-height: 1.5em;
+    background-color: var(--cas-theme-osf-surface, #F7F7F7);
+}
