Update front-end ORCiD login context
In the old split-page design, the loginproviders fragment handles
retreiving all enabled providers, embedding their login URLs and
tweaking respective behaviors. With the new single-column update,
newCAS only needs to handle the ORCiD client which has a new and
dedicated login button. The full fragment code has been trimmed
down to just a few lines of th:each, th:if and th:href statements
which wrap around the new button.

--- a/src/main/resources/templates/fragments/loginform.html
+++ b/src/main/resources/templates/fragments/loginform.html
@@ -25,12 +25,16 @@
                 <span th:utext="#{screen.welcome.instructions}"></span>
             </h3>
 
-            <section class="delegation-row">
-                <a class="delegation-button" href="#">
-                    <img class="delegation-button-logo" src="/images/orcid-logo.png">
-                    <span class="delegation-button-label" th:utext="#{screen.delegation.button.orcid}"></span>
-                </a>
-            </section>
+            <div id="orcidlogin" th:if="${delegatedAuthenticationProviderConfigurations}">
+                <section class="delegation-row"
+                    th:each="entry: ${delegatedAuthenticationProviderConfigurations}"
+                    th:if="${entry.type} == 'orcid'">
+                    <a class="delegation-button" th:href="@{${entry.redirectUrl}}">
+                        <img class="delegation-button-logo" src="/images/orcid-logo.png">
+                        <span class="delegation-button-label" th:utext="#{screen.delegation.button.orcid}"></span>
+                    </a>
+                </section>
+            </div>
 
             <section class="delegation-row">
                 <a class="delegation-button" href="#">
