--- a/src/main/resources/templates/fragments/loginform.html
+++ b/src/main/resources/templates/fragments/loginform.html
@@ -142,7 +142,7 @@
                         </p>
                     </section>
 
-                    <div th:replace="fragments/submitbutton :: submitButton (messageKey='screen.welcome.button.login')" />
+                    <div th:replace="fragments/submitbutton :: submitButton (buttonCustomization='button-osf-green', messageKey='screen.welcome.button.login')" />
 
                 </form>
 
