--- a/src/main/resources/templates/fragments/totploginform.html
+++ b/src/main/resources/templates/fragments/totploginform.html
@@ -104,7 +104,13 @@
                         </p>
                     </section>
 
-                    <div th:replace="fragments/submitbutton :: submitButton (messageKey='screen.twofactor.button.verify')" />
+                    <div th:replace="fragments/submitbutton :: submitButton (buttonCustomization='button-osf-green', messageKey='screen.twofactor.button.verify')" />
+
+                    <div class="form-button">
+                        <a class="mdc-button mdc-button--raised button-osf-red" th:href="@{/logout(service=#{osf.home.url})}">
+                            <span class="mdc-button__label" th:utext="#{screen.twofactor.button.cancel}"></span>
+                        </a>
+                    </div>
 
                 </form>
 
