--- a/src/main/resources/templates/fragments/loginform.html
+++ b/src/main/resources/templates/fragments/loginform.html
@@ -52,8 +52,9 @@
             <div class="form-wrapper">
                 <form method="post" id="fm1" th:object="${credential}" action="login">
 
-                    <div class="banner banner-danger banner-dismissible" th:if="${#fields.hasErrors('*')}">
-                        <p th:each="err : ${#fields.errors('*')}" th:utext="${err + ' '}"></p>
+                    <div id="loginformerrors" class="banner banner-danger banner-dismissible" th:if="${#fields.hasErrors('*')}">
+                        <p class="login-error-inline" th:each="err : ${#fields.errors('*')}" th:utext="${err + ' '}"></p>
+                        <a href="javascript:document.getElementById('loginformerrors').remove();" class="close">&times;</a>
                     </div>
 
                     <section class="cas-field my-2=3">
