--- a/src/main/resources/static/css/cas.css
+++ b/src/main/resources/static/css/cas.css
@@ -628,7 +628,12 @@ body {
 }
 
 .login-section {
-    max-width: 42rem;
+    max-width: 36rem;
+    min-width: fit-content;
+}
+
+#serviceui {
+    background-color: transparent;
 }
 
 .service-ui {
@@ -641,8 +646,32 @@ body {
     max-height: 5rem;
 }
 
+.service-ui .service-ui-info {
+    margin-left: 1rem!important;
+    margin-right: 1rem!important;
+}
+
+.service-ui-info .service-ui-name {
+    margin: 1rem 0;
+}
+
+.service-ui-info.service-ui-desc {
+    font-size: 1rem;
+    margin: 1rem 0;
+}
+
+.text-with-mdi {
+    font-size: 1rem;
+    margin: 0.5rem 0;
+}
+
+.mdi-before-text {
+    vertical-align: middle;
+    margin-right: 0.5rem;
+}
+
 .delegation-row {
-    padding: 10px 0;
+    margin: 0.5rem 0;
 }
 
 .delegation-button {
@@ -652,13 +681,13 @@ body {
     width: 100%;
     text-decoration: none;
     font-size: 1rem;
-    background-image: linear-gradient(to bottom, #fff 0, #e0e0e0 100%);
+    background-image: linear-gradient(to bottom, #f7f7f7, #d7d7d7);
     border: 1px solid var(--cas-theme-primary, #153e50);
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
     display: inline-block;
-    padding: 18px 0 18px 0;
+    padding: 10px 0;
     text-align: center;
 }
 
@@ -670,7 +699,7 @@ body {
 }
 
 .delegation-button:active {
-    background-image: linear-gradient(to top, #fff 0, #e0e0e0 100%);
+    background-image: linear-gradient(to top, #f7f7f7, #d7d7d7);
 }
 
 .delegation-button-logo {
@@ -678,8 +707,8 @@ body {
     left: 0;
     top: 0;
     border-right: 1px solid var(--cas-theme-primary, #153e50);
-    padding: 9px;
-    height: 54px
+    padding: 6px;
+    height: 38px
 }
 
 .delegation-button-label {
@@ -687,7 +716,12 @@ body {
     color: black;
     opacity: 0.75;
     white-space: nowrap;
-    padding-left: 55px;
+    padding-left: 39px;
+}
+
+.cas-field-primary {
+    margin-bottom: 1rem!important;
+    margin-top: 0.5rem!important;
 }
 
 .hr-text {
@@ -704,7 +738,7 @@ body {
 
 .hr-text::before {
     content: '';
-    background: linear-gradient(to right, transparent, black, var(--cas-theme-osf-surface, #F7F7F7));
+    background: linear-gradient(to right, transparent, black, var(--cas-theme-osf-surface, #f7f7f7));
     position: absolute;
     left: 0;
     top: 50%;
@@ -719,7 +753,7 @@ body {
     color: black;
     padding: 0 .5em;
     line-height: 1.5em;
-    background-color: var(--cas-theme-osf-surface, #F7F7F7);
+    background-color: var(--cas-theme-osf-surface, #f7f7f7);
 }
 
 .form-button {
