--- a/src/main/resources/templates/fragments/loginform.html
+++ b/src/main/resources/templates/fragments/loginform.html
@@ -20,8 +20,8 @@
                 </div>
             </div>
 
-            <h3 class="text-center">
-                <i class="mdi mdi-security"></i>
+            <h3 class="text-center text-with-mdi">
+                <i class="mdi mdi-security mdi-before-text"></i>
                 <span th:utext="#{screen.welcome.instructions}"></span>
             </h3>
 
@@ -80,7 +80,7 @@
                         </span>
                     </section>
 
-                    <section class="cas-field my-3">
+                    <section class="cas-field cas-field-primary my-3">
                         <div class="mdc-text-field  d-flex">
                             <input class="mdc-text-field__input"
                                 id="username"
@@ -96,7 +96,7 @@
                         </div>
                     </section>
 
-                    <section class="cas-field my-3 mdc-input-group">
+                    <section class="cas-field cas-field-primary my-3 mdc-input-group">
                         <div class="mdc-input-group-field mdc-input-group-field-append">
                             <div class="mdc-text-field  mdc-text-field--with-trailing-icon d-flex caps-check">
                                 <input class="mdc-text-field__input pwd"
@@ -121,7 +121,7 @@
                         </button>
                     </section>
 
-                    <section class="cas-field" th:if="${rememberMeAuthenticationEnabled}">
+                    <section class="cas-field cas-field-primary " th:if="${rememberMeAuthenticationEnabled}">
                         <p>
                             <input type="checkbox" name="rememberMe" id="rememberMe" value="true"/>&nbsp;
                             <label for="rememberMe" th:text="#{screen.rememberme.checkbox.title}"></label>
