Use blue for non-critical and non-submission buttons
In addition, optimized two image assets

--- a/src/main/resources/templates/casAccountNotConfirmedIdPView.html
+++ b/src/main/resources/templates/casAccountNotConfirmedIdPView.html
@@ -23,7 +23,7 @@
                 <h2 th:utext="#{screen.accountnotconfirmedidp.heading}"></h2>
                 <p th:utext="#{screen.accountnotconfirmedidp.message}"></p>
                 <div class="form-button">
-                    <a class="mdc-button mdc-button--raised button-osf-red" th:href="@{/logout(service=#{osf.home.url})}">
+                    <a class="mdc-button mdc-button--raised button-osf-blue" th:href="@{/logout(service=#{osf.home.url})}">
                         <span class="mdc-button__label" th:utext="#{screen.authnerror.button.backtoosf}"></span>
                     </a>
                 </div>
