--- a/src/main/resources/templates/casServiceErrorView.html
+++ b/src/main/resources/templates/casServiceErrorView.html
@@ -23,7 +23,7 @@
             <h2 th:utext="#{screen.service.error.header}"></h2>
             <p th:if="${rootCauseException != null and rootCauseException.code != null}" th:utext="#{${rootCauseException.code}}"></p>
             <div class="form-button">
-                <a class="mdc-button mdc-button--raised button-osf-red" th:href="@{/logout(service=#{osf.home.url})}">
+                <a class="mdc-button mdc-button--raised button-osf-blue" th:href="@{/logout(service=#{osf.home.url})}">
                     <span class="mdc-button__label" th:utext="#{screen.authnerror.button.backtoosf}"></span>
                 </a>
             </div>
