--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -42,7 +42,7 @@
                     </button>
                 </p>
                 <div class="form-button">
-                    <a class="mdc-button mdc-button--raised button-osf-red" th:href="@{/logout(service=#{osf.home.url})}">
+                    <a class="mdc-button mdc-button--raised button-osf-blue" th:href="@{/logout(service=#{osf.home.url})}">
                         <span class="mdc-button__label" th:utext="#{screen.authnerror.button.backtoosf}"></span>
                     </a>
                 </div>
