Tweak inline error banner behavior
- The backend authn exception handling turns out to have a side
  effect that non-user fault errors such as requiring two-factor
  after successful first-step login are shown as a banner error.
  This may confuse users, leaving them wonder what they've done
  wrong. Added a filter to hide messages of such kind.

- In addition, banners are now dismissible "per error".

--- a/src/main/resources/static/css/cas.css
+++ b/src/main/resources/static/css/cas.css
@@ -790,6 +790,7 @@ body {
 .banner-dismissible {
     background-color: var(--cas-theme-osf-red, #b52b27);
     color: white;
+    margin: 0.25rem 0;
 }
 
 .banner-dismissible .close {
