--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -7,23 +7,11 @@
 
     <title th:text="#{screen.unavailable.header}">CAS Error View</title>
     <link href="../../static/css/cas.css" rel="stylesheet" th:remove="tag" />
-
-    <script th:inline="javascript">
-        /*<![CDATA[*/
-
-        function showErrorDetails() {
-            $("#errorMsg").hide();
-            $("#errorDetails").empty();
-            $("#errorDetails").append("<p><pre style='white-space: pre-wrap;'>" + /*[[${#strings.escapeXml(trace)}]]*/ +"</pre></p>");
-        }
-        /*]]>*/
-    </script>
 </head>
 
 <body>
-<main role="main" class="container mt-3 mb-3">
-    <div layout:fragment="content">
-        <div class="mdc-card p-4 banner banner-danger">
+    <main role="main" class="container mt-3 mb-3">
+        <div layout:fragment="content" class="banner banner-danger mdc-card p-4">
             <div class="login-error-card">
                 <div class="service-ui" th:replace="fragments/osfbannerui :: osfBannerUI">
                     <a href="fragments/osfbannerui.html"></a>
@@ -32,23 +20,48 @@
                     <span th:utext="#{screen.authnerror.instructions}"></span>
                 </h3>
                 <hr class="my-4" />
-                <h2 th:utext="#{screen.unavailable.heading(${status},${error})}"></h2>
+                <h2 th:utext="#{screen.unavailable.heading}"></h2>
                 <div th:utext="#{screen.unavailable.message}"></div>
-                <pre id="errorMsg" class="mt-4" style="white-space: pre-wrap;" th:text="${'Error: ' + message}"></pre>
-                <p id="errorDetails" class="word-break-all">
-                    <button type="button" class="mdc-button mdc-button--raised"
-                            onclick="showErrorDetails();">
-                        <span class="mdc-button__label">View Details</span>
-                    </button>
-                </p>
-                <div class="form-button">
+                <div class="form-button-inline">
                     <a class="mdc-button mdc-button--raised button-osf-blue" th:href="@{/logout(service=#{osf.home.url})}">
                         <span class="mdc-button__label" th:utext="#{screen.authnerror.button.backtoosf}"></span>
                     </a>
+                    <button id="buttonViewErrorDetails" type="button"
+                        class="mdc-button mdc-button--raised button-osf-red"
+                        onclick="showErrorDetails();">
+                        <span class="mdc-button__label" th:utext="#{screen.unavailable.button.viewdetails}"></span>
+                    </button>
+                    <button id="buttonHideErrorDetails" type="button" style="display: none;"
+                        class="mdc-button mdc-button--raised button-osf-red"
+                        onclick="hideErrorDetails();">
+                        <span class="mdc-button__label" th:utext="#{screen.unavailable.button.hidedetails}"></span>
+                    </button>
+                </div>
+                <div id="errorDetails" class="pre-formatted-small word-break-all" style="display: none;">
+                    <hr class="hr-text" data-content="DETAILS" />
+                    <pre th:utext="${'Error: ' + status + ' - ' + error}"></pre>
+                    <pre th:utext="${'Timestamp: ' + #dates.formatISO(#dates.createNow())}"></pre>
+                    <pre th:text="${'Message: ' + message}"></pre>
+                    <pre style="white-space: pre-wrap;" th:utext="${#strings.escapeXml(trace)}"></pre>
                 </div>
             </div>
+
+            <script th:inline="javascript">
+                /*<![CDATA[*/
+                function showErrorDetails() {
+                    $("#buttonViewErrorDetails").hide()
+                    $("#buttonHideErrorDetails").show()
+                    $("#errorDetails").show()
+                }
+                function hideErrorDetails() {
+                    $("#buttonViewErrorDetails").show()
+                    $("#buttonHideErrorDetails").hide()
+                    $("#errorDetails").hide()
+                }
+                /*]]>*/
+            </script>
         </div>
-    </div>
-</main>
+    </main>
 </body>
+
 </html>
