Remove deprecated / unused fragments and update related templates

--- a/src/main/resources/static/css/cas.css
+++ b/src/main/resources/static/css/cas.css
@@ -632,6 +632,12 @@ body {
     min-width: fit-content;
 }
 
+@media screen and (max-width: 767.99px) {
+    .login-section {
+        padding: 1rem 1.5rem;
+    }
+}
+
 #serviceui {
     background-color: transparent;
 }
