--- a/src/main/resources/templates/casLoginView.html
+++ b/src/main/resources/templates/casLoginView.html
@@ -15,8 +15,7 @@
 
         <div class="d-flex justify-content-center flex-md-row flex-column mdc-card mdc-card-content"
             th:classappend="${delegatedAuthenticationProviderConfigurations} OR ${accepttoApplicationId} ? 'w-lg-30' : 'w-lg-50'">
-            <section id="loginForm"
-                class="login-section login-form"
+            <section id="loginForm" class="login-section login-form"
                 th:if="${@casThymeleafLoginFormDirector.isLoginFormViewable(#vars)}">
                 <div th:replace="fragments/loginform :: loginform">
                     <a href="fragments/loginform.html"></a>
@@ -25,4 +24,5 @@
         </div>
     </div>
 </body>
+
 </html>
