--- a/src/main/resources/templates/casTwoFactorLoginView.html
+++ b/src/main/resources/templates/casTwoFactorLoginView.html
@@ -11,19 +11,18 @@
 </head>
 
 <body class="login mdc-typography">
-<div layout:fragment="content" class="d-flex justify-content-center">
+    <div layout:fragment="content" class="d-flex justify-content-center">
 
-    <div class="d-flex justify-content-center flex-md-row flex-column mdc-card mdc-card-content"
-         th:classappend="${delegatedAuthenticationProviderConfigurations} OR ${accepttoApplicationId} ? 'w-lg-30' : 'w-lg-50'">
-        <section id="totploginForm"
-                 class="login-section login-form"
-                 th:if="${@casThymeleafLoginFormDirector.isLoginFormViewable(#vars)}">
-            <div th:replace="fragments/totploginform :: totploginform">
-                <a href="fragments/totploginform.html"></a>
-            </div>
-        </section>
+        <div class="d-flex justify-content-center flex-md-row flex-column mdc-card mdc-card-content"
+            th:classappend="${delegatedAuthenticationProviderConfigurations} OR ${accepttoApplicationId} ? 'w-lg-30' : 'w-lg-50'">
+            <section id="totploginForm" class="login-section login-form"
+                th:if="${@casThymeleafLoginFormDirector.isLoginFormViewable(#vars)}">
+                <div th:replace="fragments/totploginform :: totploginform">
+                    <a href="fragments/totploginform.html"></a>
+                </div>
+            </section>
+        </div>
     </div>
-</div>
 </body>
 
 </html>
