--- a/src/main/resources/templates/casAutoRedirectToOrcidLoginView.html
+++ b/src/main/resources/templates/casAutoRedirectToOrcidLoginView.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title th:text="#{screen.institutionssonotimplemented.heading}"></title>
+    <title th:text="#{screen.orcidredirectnotimplemented.heading}"></title>
     <link href="../../static/css/cas.css" rel="stylesheet" th:remove="tag" />
 </head>
 
@@ -20,8 +20,20 @@
                     <span th:utext="#{screen.authnerror.instructions}"></span>
                 </h3>
                 <hr class="my-4" />
-                <h2 th:utext="#{screen.institutionssonotimplemented.heading}"></h2>
-                <p th:utext="#{screen.institutionssonotimplemented.message}"></p>
+                <h2 th:utext="#{screen.orcidredirectnotimplemented.heading}"></h2>
+                <p th:utext="#{screen.orcidredirectnotimplemented.message}"></p>
+
+                <div id="orcidlogin" th:if="${delegatedAuthenticationProviderConfigurations}">
+                    <section class="delegation-row"
+                        th:each="entry: ${delegatedAuthenticationProviderConfigurations}"
+                        th:if="${entry.type} == 'orcid'">
+                        <a class="delegation-button" th:href="@{${entry.redirectUrl}}">
+                            <img class="delegation-button-logo" src="/images/orcid-logo.png">
+                            <span class="delegation-button-label" th:utext="#{screen.delegation.button.orcid}"></span>
+                        </a>
+                    </section>
+                </div>
+
                 <div class="form-button">
                     <a class="mdc-button mdc-button--raised button-osf-blue" th:href="@{/logout(service=#{osf.home.url})}">
                         <span class="mdc-button__label" th:utext="#{screen.authnerror.button.backtoosf}"></span>
