--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -12,8 +12,9 @@
 <body>
     <main role="main" class="container mt-3 mb-3">
         <div layout:fragment="content" class="banner banner-danger mdc-card p-4">
+
             <div class="login-error-card">
-                <div class="service-ui" th:replace="fragments/osfbannerui :: osfBannerUI">
+                <div th:replace="fragments/osfbannerui :: osfBannerUI">
                     <a href="fragments/osfbannerui.html"></a>
                 </div>
                 <h3 class="text-center title-danger">
@@ -60,6 +61,7 @@
                 }
                 /*]]>*/
             </script>
+
         </div>
     </main>
 </body>
