--- a/src/main/resources/templates/casLogoutView.html
+++ b/src/main/resources/templates/casLogoutView.html
@@ -5,20 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
-    <title th:text="#{screen.logout.header}"></title>
+    <title th:text="#{screen.generic.logout.header}"></title>
     <link href="../../static/css/cas.css" rel="stylesheet" th:remove="tag" />
 </head>
 
 <body>
-<main role="main" class="container mt-3 mb-3">
-    <div layout:fragment="content">
-        <div class="w-50 m-auto mdc-card p-4">
-            <h2 class="banner-heading" th:utext="#{screen.logout.header}"></h2>
-            <p class="banner-message" th:utext="#{screen.logout.success}"></p>
-            <p class="banner-message" th:utext="#{screen.logout.security}"></p>
+    <main role="main" class="container mt-3 mb-3">
+        <div layout:fragment="content">
+            <div class="banner-generic m-auto mdc-card p-4">
+                <div class="login-generic-card">
+                    <div th:replace="fragments/osfbannerui :: osfBannerUI">
+                        <a href="fragments/osfbannerui.html"></a>
+                    </div>
+                    <hr class="my-4" />
+                    <h2 th:utext="#{screen.generic.logout.heading}"></h2>
+                    <p th:utext="#{screen.generic.logout.message}"></p>
+                    <div class="form-button">
+                        <a class="mdc-button mdc-button--raised button-osf-green" th:href="@{/login}">
+                            <span class="mdc-button__label" th:utext="#{screen.generic.button.backtologin}"></span>
+                        </a>
+                    </div>
+                    <div class="form-button">
+                        <a class="mdc-button mdc-button--raised button-osf-blue" th:href="@{/logout(service=#{osf.logout.url})}">
+                            <span class="mdc-button__label" th:utext="#{screen.generic.button.backtoosf}"></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-</main>
+    </main>
 </body>
 
 </html>
