--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -19,24 +19,24 @@
 </head>
 
 <body>
-<script th:replace="fragments/scripts" />
+    <script th:replace="fragments/scripts"></script>
 
-<div th:replace="fragments/header :: header">
-    <a href="fragments/header.html"></a>
-</div>
+    <div th:replace="fragments/header :: header">
+        <a href="fragments/header.html"></a>
+    </div>
 
-<div class="mdc-drawer-scrim"></div>
+    <div class="mdc-drawer-scrim"></div>
 
-<div class="mdc-drawer-app-content mdc-top-app-bar--fixed-adjust d-flex justify-content-center">
-    <main role="main" id="main-content" class="container-lg py-4">
-        <div layout:fragment="content" id="content">
-        </div>
-    </main>
-</div>
+    <div class="mdc-drawer-app-content mdc-top-app-bar--fixed-adjust d-flex justify-content-center">
+        <main role="main" id="main-content" class="container-lg py-4">
+            <div layout:fragment="content" id="content">
+            </div>
+        </main>
+    </div>
 
-<div th:replace="fragments/footer :: footer">
-    <a href="fragments/footer.html"></a>
-</div>
-
+    <div th:replace="fragments/footer :: footer">
+        <a href="fragments/footer.html"></a>
+    </div>
 </body>
+
 </html>
